# NeurOff

./: .gitignore  CMakeLists.txt  Makefile  README.md  enonce.md
algos/: InitNeur.md  Outneurone.md
algos/partie1/: InitNeur.md  Outneurone.md
algos/partie2/: InitCouche.md  OutCouche.md
algos/partie3/: CreerResNeur.md
front/include/: graphics.h
front/src/: graphic.c
include/: couche.h  linkedlist.h  neurone.h  reseau.h  utils.h
src/: linkedlist.c  linkedlist_int.c  main.c  partie1.c  partie2.c  partie3.c  partie4.c  utils.c
utils/: linkedlist_int.h
